[project]
name = "matchpredictiondatasetgeneration"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "statbotics>=3.0.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]
